# Software-Suite

klessydra_general_tests/: CMakeLists.txt
klessydra_general_tests/barrier_test/: barrier_test.c
klessydra_general_tests/helloworld_kless/: helloworld.c
klessydra_general_tests/perf_count_test/: CMakeLists.txt  perf_count.c
klessydra_general_tests/playground/: CMakeLists.txt  playground.c
klessydra_general_tests/region_lock_test/: CMakeLists.txt  region_lock_test.c
klessydra_general_tests/spin_lock_test/: CMakeLists.txt  spin_lock_test.c
klessydra_general_tests/wfi_test/: CMakeLists.txt  wfi_test.c
klessydra_vcu_tests/: CMakeLists.txt
klessydra_vcu_tests/VGG-16/: CMakeLists.txt  VGG-16.c
klessydra_vcu_tests/convolution_test/: CMakeLists.txt  convolution_test.c
klessydra_vcu_tests/convolution_test/convolution_test_multi_spmu_subkernels_decoupled/: convolution_test_multi_spmu_subkernels_decoupled.c
klessydra_vcu_tests/fft_test/: fft_accl.c
klessydra_vcu_tests/misc/: CMakeLists.txt  spm_test.c
klessydra_vcu_tests/vcu_instruction_test/: CMakeLists.txt  KVCU_test.cpp
klessydra_vcu_tests/vcu_instruction_tests/: KVCU_test.cpp
klessydra_vcu_tests/vcu_instruction_tests/KDOTP_test/: KDOTP_test.c
klessydra_vcu_tests/vcu_instruction_tests/KSVMULSC_test/: KSVMULSC_test.c
klessydra_vcu_tests/vcu_instruction_tests/KVMUL_test/: KVMUL_test.c
