add_subdirectory(barrier_test)
add_subdirectory(debug_test)
add_subdirectory(helloworld_kless)
add_subdirectory(perf_count_test)
add_subdirectory(playground)
add_subdirectory(random_test)
add_subdirectory(region_lock_test)
add_subdirectory(spin_lock_test)
add_subdirectory(sw_irq_test)
add_subdirectory(wfi_test)
